manifests/all/5_backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config    
      containers:
        - image: avernusx/otus-homework-2-php-fpm:latest
          name: php-fpm
        - image: openresty/openresty:xenial
          name: nginx
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /usr/local/openresty/nginx/conf/nginx.conf
              subPath: nginx.conf
